--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -59,11 +59,11 @@
   padding: 15px;
   text-align: left;
   transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
-  background-color: blue;
+  background-color: white;
 }
 
 .tile:hover {
-  background-color: red;
+  background-color: black;
   transform: scale(1.05);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
