--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -57,7 +57,7 @@
   border: 1px solid #ddd;
   border-radius: 12px;
   padding: 15px;
-  text-align: left;
+  text-align: center;
   transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
   background-color: white;
 }
