--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,10 +25,12 @@
     {% endif %}
 
     <!-- Light/Dark Mode Toggle -->
-    <div id="theme-toggle" style="cursor: pointer; display: flex; align-items: center; gap: 10px; padding: 10px; margin-top: 20px;">
-      <img id="light-icon" src="https://img.icons8.com/ios/50/sun--v1.png" alt="Light Mode" style="display: none; width: 30px; height: 30px;">
-      <img id="dark-icon" src="https://img.icons8.com/ios/50/do-not-disturb-2.png" alt="Dark Mode" style="width: 30px; height: 30px;">
-      <span id="theme-label" style="font-size: 14px;">Switch Theme</span>
-    </div>
-  </div>
+    <div class="container">
+  <input type="checkbox" id="toggle">
+  <label for="toggle">
+    <img id="light-icon" src="https://img.icons8.com/ios/50/sun--v1.png" alt="Light Mode" style="width: 25px; height: 25px;">
+    <img id="dark-icon" src="https://img.icons8.com/ios/50/do-not-disturb-2.png" alt="Dark Mode" style="width: 25px; height: 25px;">
+  </label>
+</div>
+
 {% endif %}
