--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -51,6 +51,35 @@
   }
 }
 
+/* Dark Mode Based on System Settings */
+@media (prefers-color-scheme: dark) {
+  .breadcrumbs {
+    color: #e5e5e5; /* Light text for breadcrumb */
+    background-color: #1e1e1e; /* Dark background */
+  }
+
+  .breadcrumbs ol {
+    color: #e5e5e5;
+  }
+
+  .breadcrumbs .current {
+    color: #ffffff; /* Bright white for current breadcrumb */
+  }
+}
+
+/* Dark Theme Class Override */
+body.dark-theme .breadcrumbs {
+  color: #e5e5e5;
+  background-color: #1e1e1e;
+}
+
+body.dark-theme .breadcrumbs ol {
+  color: #e5e5e5;
+}
+
+body.dark-theme .breadcrumbs .current {
+  color: #ffffff;
+}
 
 /*
    Post pagination navigation links
@@ -158,278 +187,91 @@
   }
 }
 
-.page__content + .pagination,
-.page__meta + .pagination,
-.page__share + .pagination,
-.page__comments + .pagination {
-  margin-top: 2em;
-  padding-top: 2em;
-  border-top: 1px solid $border-color;
-}
+/* Dark Mode Based on System Settings */
+@media (prefers-color-scheme: dark) {
+  .pagination {
+    background-color: #1e1e1e;
+    color: #e5e5e5;
+  }
 
-
-/*
-   Priority plus navigation
-   ========================================================================== */
-
-.greedy-nav {
-  position: relative;
-  min-width: 250px;
-  background: $background-color;
-
-  a {
-    display: block;
-    margin: 0 1rem;
-    padding: 0.5rem 0;
-    color: $masthead-link-color;
-    text-decoration: none;
+  .pagination a {
+    color: #e5e5e5;
+    border: 1px solid #333;
 
     &:hover {
-      color: $masthead-link-color-hover;
+      color: #ffffff;
     }
   }
 
-  button {
-    position: absolute;
-    height: 2.5rem;
-    right: 0;
-    padding: 0 0.5rem;
-    border: 0;
-    outline: none;
-    background-color: $primary-color;
-    color: #fff;
-    cursor: pointer;
-    z-index: 100;
+  .pagination a.current {
+    background: #333;
+    color: #ffffff;
   }
+}
 
-  .visible-links {
-    display: table;
+/* Dark Theme Class Override */
+body.dark-theme .pagination {
+  background-color: #1e1e1e;
+  color: #e5e5e5;
+}
 
-    li {
-      display: table-cell;
-      vertical-align: middle;
+body.dark-theme .pagination a {
+  color: #e5e5e5;
+  border: 1px solid #333;
 
-      &:first-child {
-        font-weight: bold;
-        text-wrap: wrap;
+  &:hover {
+    color: #ffffff;
+  }
+}
 
-        a {
-          margin-left: 0;
-        }
-      }
+body.dark-theme .pagination a.current {
+  background: #333;
+  color: #ffffff;
+}
 
-      &:last-child {
-        a {
-          margin-right: 0;
-        }
-      }
-    }
+/* Greedy Navigation (Dark Mode) */
+@media (prefers-color-scheme: dark) {
+  .greedy-nav {
+    background-color: #1e1e1e;
 
     a {
-      position: relative;
+      color: #e5e5e5;
 
-      &:before {
-        content: "";
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        height: 4px;
-        background: mix(#fff, $primary-color, 50%);
-        width: 100%;
-        -webkit-transition: $global-transition;
-        transition: $global-transition;
-        -webkit-transform: scaleX(0);
-            -ms-transform: scaleX(0);
-                transform: scaleX(0); /* hide*/
-      }
-
-      &:hover:before {
-        -webkit-transform: scaleX(1);
-            -ms-transform: scaleX(1);
-                transform: scaleX(1); /* reveal*/
+      &:hover {
+        color: #ffffff;
       }
     }
   }
 
   .hidden-links {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    margin-top: 15px;
-    padding: 5px;
-    border: 1px solid $border-color;
-    border-radius: $border-radius;
-    background: #fff;
-    box-shadow: 0 0 10px rgba(#000, 0.25);
+    background-color: #333;
+    color: #e5e5e5;
 
     a {
-      margin: 0;
-      padding: 10px 20px;
-      font-size: $type-size-5;
+      color: #e5e5e5;
 
       &:hover {
-        color: $masthead-link-color-hover;
-        background: mix(#fff, $primary-color, 75%);
-      }
-    }
-
-    &:before {
-      content: "";
-      position: absolute;
-      top: -11px;
-      right: 10px;
-      width: 0;
-      border-style: solid;
-      border-width: 0 10px 10px;
-      border-color: $border-color transparent;
-      display: block;
-      z-index: 0;
-    }
-
-    &:after {
-      content: "";
-      position: absolute;
-      top: -10px;
-      right: 10px;
-      width: 0;
-      border-style: solid;
-      border-width: 0 10px 10px;
-      border-color: #fff transparent;
-      display: block;
-      z-index: 1;
-    }
-
-    li {
-      display: block;
-      border-bottom: 1px solid $border-color;
-
-      &:last-child {
-        border-bottom: none;
+        background-color: #444;
+        color: #ffffff;
       }
     }
   }
 }
 
+body.dark-theme .greedy-nav {
+  background-color: #1e1e1e;
+}
 
-/*
-   Navigation list
-   ========================================================================== */
-
-.nav__list {
-  font-size: 1.25rem;
-
-  ul {
-    margin-bottom: 1em;
-  }
+body.dark-theme .hidden-links {
+  background-color: #333;
+  color: #e5e5e5;
 
   a {
-    display: block;
-    padding: 0.125em 0;
-    color: inherit;
+    color: #e5e5e5;
 
     &:hover {
-      text-decoration: underline;
-    }
-  }
-
-  .active {
-    margin-left: -0.5em;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    color: #fff;
-    font-weight: bold;
-    background: $primary-color;
-    border-radius: $border-radius;
-
-    &:hover {
-      color: #fff;
-    }
-  }
-}
-
-.nav__title {
-  margin: 0;
-  padding: 0.5rem 1rem;
-  font-family: $sans-serif-narrow;
-  font-size: $type-size-5;
-  font-weight: bold;
-}
-
-.nav__sub-title {
-  display: block;
-  margin: 0.5rem 0;
-  padding: 0.5rem 0;
-  font-family: $sans-serif-narrow;
-  font-size: $type-size-6;
-  font-weight: bold;
-  text-transform: uppercase;
-  border-bottom: 1px solid $border-color;
-}
-
-
-/*
-   Table of contents navigation
-   ========================================================================== */
-
-.toc {
-  font-family: $sans-serif-narrow;
-  color: $gray;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  background-color: #fff;
-  border: 1px solid $border-color;
-  border-radius: $border-radius;
-  box-shadow: $box-shadow;
-
-  .nav__title {
-    color: #fff;
-    font-size: $type-size-6;
-    background: $primary-color;
-    border-top-left-radius: $border-radius;
-    border-top-right-radius: $border-radius;
-  }
-}
-
-.toc__menu {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  list-style: none;
-  font-size: 0.8rem;
-
-  a {
-    display: block;
-    padding: 0.5rem 1rem;
-    color: $gray;
-    font-size: $type-size-7;
-    font-weight: bold;
-    line-height: 1.5;
-    border-bottom: 1px solid $border-color;
-    text-decoration-line: none !important;
-
-    &:hover {
-      color: #000;
-      background: $lighter-gray;
-    }
-  }
-
-  > li:last-child {
-    a {
-      border-bottom: none;
-    }
-  }
-
-  li ul > li a {
-    padding-left: 2rem;
-    font-weight: normal;
-  }
-
-  /* hide sub sub links on small screens*/
-  li > ul li {
-    display: none;
-
-    @include breakpoint($medium) {
-      display: block;
+      background-color: #444;
+      color: #ffffff;
     }
   }
 }
