--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -8,7 +8,7 @@ table {
   font-family: $global-font-family;
   font-size: $type-size-6;
   border-collapse: collapse;
-  border: 1px solid $light-gray;
+  border: 1px solid white;
   text-align: center; /* Center-align text */
 
   & + table {
@@ -17,21 +17,21 @@ table {
 }
 
 thead {
-  background-color: $lighter-gray;
-  border-bottom: 1px solid $light-gray;
+  background-color: black;
+  border-bottom: 1px solid white;
 }
 
 th {
   padding: 0.5em;
   font-weight: bold;
   text-align: center; /* Center-align header text */
-  border-right: 1px solid $light-gray;
+  border-right: 1px solid white;
 }
 
 td {
   padding: 0.5em;
-  border-bottom: 1px solid $light-gray;
-  border-right: 1px solid $light-gray;
+  border-bottom: 1px solid white;
+  border-right: 1px solid white;
 }
 
 tr, td, th {
