--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -18,13 +18,13 @@ table {
 
 thead {
   background-color: #f9f9f9; /* Default light mode background */
-  border-bottom: 1px solid black; /* Default light mode border */
+  border-bottom: 1px solid white; /* Default light mode border */
   transition: background-color 0.3s ease, border-bottom 0.3s ease;
 }
 
 th, td {
   padding: 0.5em;
-  border: 1px solid black; /* Default light mode border */
+  border: 1px solid white; /* Default light mode border */
   transition: border-color 0.3s ease, color 0.3s ease;
 }
 
@@ -39,25 +39,25 @@ tr, td, th {
 /* Dark Mode Table Styles */
 @media (prefers-color-scheme: dark) {
   table {
-    border: 1px solid white;
-    color: white;
+    border: 1px solid black;
+    color: black;
   }
 
   thead {
     background-color: #1e1e1e;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid black;
   }
 
   th, td {
-    border: 1px solid white;
+    border: 1px solid black;
   }
 }
 
 /* Light Mode (Default) Table Styles */
 body:not(.dark-theme) {
   table {
-    border: 1px solid black;
-    color: black;
+    border: 1px solid white;
+    color: white;
   }
 
   thead {
@@ -65,6 +65,6 @@ body:not(.dark-theme) {
   }
 
   th, td {
-    border: 1px solid black;
+    border: 1px solid white;
   }
 }
