--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,34 +1,39 @@
-/* Minimal Mistakes Jekyll Theme */
+---
+---
 
-/* Reset Styles */
-@import "reset";
+/*
+ *    Minimal Mistakes Jekyll Theme
+ *
+ *  - Michael Rose
+ *  - mademistakes.com
+ *  - https://twitter.com/mmistakes
+ *
+*/
 
-/* Base Styles */
-@import "base";
-
-/* Variables and Mixins */
+@import "vendor/breakpoint/breakpoint"; // media query mixins
 @import "variables";
 @import "mixins";
+@import "vendor/susy/susy";
 
-/* Utility Classes */
+@import "reset";
+@import "base";
+
 @import "utilities";
 @import "animations";
-
-/* Component Styles */
-@import "buttons";
 @import "tables";
-@import "forms";
+@import "buttons";
 @import "notices";
 @import "masthead";
 @import "navigation";
 @import "footer";
+@import "syntax";
 
-/* Layouts */
+@import "forms";
+
 @import "page";
 @import "archive";
 @import "sidebar";
 
-/* Vendor Libraries */
 @import "vendor/font-awesome/fontawesome";
 @import "vendor/font-awesome/solid";
 @import "vendor/font-awesome/brands";
