--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -61,11 +61,11 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #fff;
-$background-color           : #fff;
+$body-color                 : #000;
+$background-color           : #000;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
+$text-color                 : $fff;
 $border-color               : $lighter-gray;
 
 $primary-color              : #7a8288;
