--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -68,7 +68,7 @@ $code-background-color-dark : $light-gray;
 $text-color                 : $fff;
 $border-color               : $lighter-gray;
 
-$primary-color              : #7a8288;
+$primary-color              : #000;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
